# yb-orm

./: .cproject  .gitignore  .project  222.txt  AUTHORS  BUILD  BUILD.win32  CHANGES  CMakeLists.txt  COPYING  Doxyfile  LICENSE  Makefile.am  README  README.md  README.rus  TODO  acinclude.m4  autogen.sh  build-bcc.bat  build-mingw-qt.bat  build-mingw.bat  build-msvc-qt.bat  build-msvc.bat  build.bat  configure.ac  configure.in  dirs.mk  mssql_testdb.sql  msvc-settings.odt  postgres.txt  xml-format-ru.txt  xml-format.txt
debian/: README.Debian  README.source  changelog  control  docs  rules
doc/: About  About.en.html  About.ru.html  Build  Build.en.html  Build.ru.html  CMakeLists.txt  Internals  Internals.en.html  Internals.en.odt  Internals.ru.html  Internals.ru.odt  MSVC_Settings  README.msvc2008.txt  SqlDriver  SqlDriver.en.html  SqlDriver.ru.html  ToDo  ToDo.en.html  ToDo.ru.html  Tutorial1  Tutorial1.en.html  Tutorial1.en.odt  Tutorial1.ru.html  Tutorial1.ru.odt  Tutorial2  Tutorial2.en.html  Tutorial2.en.odt  Tutorial2.ru.html  Tutorial2.ru.odt  Tutorial3  Tutorial3.en.html  Tutorial3.en.odt  Tutorial3.ru.html  Tutorial3.ru.odt  Tutorial4  Tutorial4.en.html  Tutorial4.ru.html  TutorialDecl.en.html  TutorialDecl.ru.html  (+18 more)
doc/pics/: CMakeLists.txt
examples/: CMakeLists.txt  DBScheme.xml  Makefile.am  dbpool.cfg.xml  ex1_schema.xml  ex2_schema.xml  example1.bat  example1.cpp  example1.sh  example1.sh.in  example2.bat  example2.cpp  example2.sh.in
examples/auth/: CMakeLists.txt  Makefile.am  README  README.auth  acinclude.m4  autogen.sh  build-bcc.bat  build-mingw-qt.bat  build-mingw.bat  build-msvc-qt.bat  build-msvc.bat  build.bat  configure.ac
examples/auth/src/: App.cpp  App.h  CMakeLists.txt  Makefile.am  app_class.cpp  app_class.h  auth.bat  auth.cpp  auth.sh.in  auth_schema.xml  http_message.cpp  http_message.h  logger.cpp  logger.h  md5.c  md5.h  micro_http.cpp  micro_http.h  model.h  tcp_socket.cpp  tcp_socket.h  thread_pool.h  xml_method.h
examples/auth/src/domain/: CMakeLists.txt  Makefile.am
examples/domain/: CMakeLists.txt  Makefile.am  gen.cmake
examples/tutorial/: CMakeLists.txt  Makefile.am  build-bcc.bat  build-mingw.bat  build-msvc.bat  tut1.cpp  tut1.xml  tut2.cpp  tut2_new.cpp  tut3.cpp  tut4.cpp  tut4.xml  tut4_new.cpp
examples/tutorial/domain/: CMakeLists.txt  Makefile.am
include/: CMakeLists.txt  Makefile.am
lib/: Makefile.am
lib/orm/: AutoXMLizable.h  CMakeLists.txt  CodeGen.cpp  CodeGen.h  DBPoolDriver.cpp  DBPoolDriver.h  DataObj.h  DataObject.cpp  DataObject.h  DbpoolSession.cpp  DbpoolSession.h  DomainFactory.cpp  DomainFactory.h  DomainFactorySingleton.h  DomainObj.cpp  DomainObj.h  DomainObject.h  Engine.cpp  Engine.h  EngineBase.cpp  EngineBase.h  EngineSession.cpp  EngineSession.h  Expression.cpp  Expression.h  Filters.cpp  Filters.h  Makefile.am  Mapper.cpp  Mapper.h  MapperEngine.cpp  MapperEngine.h  MapperSession.cpp  MapperSession.h  MetaData.cpp  MetaData.h  MetaDataConfig.cpp  MetaDataConfig.h  MetaDataSingleton.h  OdbcDriver.cpp  (+30 more)
lib/orm/test/: CMakeLists.txt  Makefile.am  TestDataObject.cpp  TestEngine.cpp  TestExpression.cpp  TestFilters.cpp  TestIntegrMapper.cpp  TestMapper.cpp  TestMetaData.cpp  TestOdbcSession.cpp  TestRowData.cpp  TestSession.cpp  TestSqlDataSource.cpp  TestValue.cpp  TestXMLConfig.cpp  TestXMLNode.cpp  odbc.ini  odbcinst.ini  test_schema.xml  yborm_unit_tests.bat
lib/orm/test/misc/: odbc.ini  odbcinst.ini  test1_db.sql  test1_db_ora.sql
lib/util/: CMakeLists.txt  DataTypes.cpp  DataTypes.h  ElementTree.cpp  ElementTree.h  Exception.cpp  Exception.h  Makefile.am  ResultSet.h  Singleton.h  String.cpp  String.h  Thread.cpp  Thread.h  UnicodeSupport.cpp  UnicodeSupport.h  Utility.h  Value.cpp  Value.h  XmlWriter.cpp  decimal.cpp  decimal.h  nlogger.cpp  nlogger.h  param.hpp  str_utils.cpp  str_utils.hpp  xml_writer.cpp  xml_writer.h  xmlnode.cpp  xmlnode.h
lib/util/test/: CMakeLists.txt  Makefile.am  TestDecimal.cpp  TestMisc.cpp  TestResultSet.cpp  TestSingleton.cpp  TestValue.cpp  ybutil_unit_tests.bat
redhat/: yborm-lib64.diff  yborm.spec
src/: .gitignore  CMakeLists.txt  DBScheme.xml  Makefile.am  gen_sql.xsl  init_sqlite.bat  orm_domain_generator.cpp  yborm_env.bat  yborm_gen.cpp  yborm_gen_domain.cpp  yborm_gen_sql  yborm_gen_sql.bat  yborm_gen_sql.in  yborm_gen_sql.xsl
src/orm/: CMakeLists.txt  Makefile.am  alias.cpp  code_gen.cpp  data_object.cpp  dialect_interbase.cpp  dialect_mssql.cpp  dialect_mysql.cpp  dialect_oracle.cpp  dialect_postgres.cpp  dialect_sqlite.cpp  domain_factory.cpp  domain_object.cpp  driver_odbc.cpp  driver_qtsql.cpp  driver_soci.cpp  driver_sqlite.cpp  engine.cpp  expression.cpp  odbc_driver.cpp  qtsql_driver.cpp  schema.cpp  schema_config.cpp  schema_reader.cpp  soci_driver.cpp  sql_driver.cpp  sql_pool.cpp  sqlite_driver.cpp  tiodbc.cpp  xmlizer.cpp
src/util/: CMakeLists.txt  Makefile.am  data_types.cpp  decimal.cpp  element_tree.cpp  exception.cpp  nlogger.cpp  string_type.cpp  string_utils.cpp  thread.cpp  utility.cpp  value_type.cpp  xml_writer.cpp
src/yborm_gen/: CMakeLists.txt  Makefile.am  init_sqlite.bat  yborm_env-bcb6-noqt.bat  yborm_env-mingw44-qt4.bat  yborm_env-mingw48-noqt.bat  yborm_env-mingw48-qt5.bat  yborm_env-mingw810-noqt.bat  yborm_env-msvc2010-noqt.bat  yborm_env-msvc2013-noqt.bat  yborm_env-msvc2013-qt5.bat  yborm_env-msvc2019-noqt.bat  yborm_env.bat  yborm_gen.cpp  yborm_gen_sql.bat
tests/: CMakeLists.txt  (+1 more)
tests/orm/: CMakeLists.txt  Makefile.am  alias.py  odbc.ini  test_alias.cpp  test_data_object.cpp  test_domain_object.cpp  test_engine.cpp  test_expression.cpp  test_schema.cpp  test_schema_config.cpp  test_xmlizer.cpp  testdb_schema.xml  unit_tests.sh.in  yborm_catch_tests.sh
tests/util/: CMakeLists.txt  Makefile.am  test_decimal.cpp  test_misc.cpp  test_result_set.cpp  test_singleton.cpp  test_value_type.cpp
tutorial/: .gitignore  CMakeLists.txt  Makefile.am  build-bcc.bat  build-mingw.bat  build-msvc.bat  tut1.cpp  tut1.xml  tut2.cpp  tut3.cpp  tut4.cpp
tutorial/domain/: .gitignore  CMakeLists.txt  Makefile.am
(+58 files in other folders)
