AC_INIT(configure.in)

AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE(yborm, 0.1)

AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL

AM_PATH_XML2
CPPFLAGS="$CPPFLAGS $XML_CPPFLAGS"

YB_BOOST([1.31.0],[],
    AC_MSG_ERROR([Package requires the Boost C++ libraries!]))
YB_BOOST_THREAD([],
    AC_MSG_ERROR([Package requires the Boost threads library!]))
YB_BOOST_DATETIME([],
    AC_MSG_ERROR([Package requires the Boost date_time library!]))
YB_ODBC([],
    AC_MSG_ERROR([ODBC library is required!]))
YB_PATH_CPPUNIT([1.10.0],[],
                [echo "WARNING!! You will not be able to run tests!!"])

AC_OUTPUT(Makefile
	lib/Makefile
	lib/test/Makefile
	lib/util/Makefile
	lib/util/test/Makefile
	lib/orm/Makefile
	lib/orm/test/Makefile
	src/Makefile
        examples/Makefile
        examples/domain/Makefile)

