install (FILES
    Internals.en.html Internals.ru.html
    SqlDriver.en.html SqlDriver.ru.html
    XmlFormat.en.html XmlFormat.ru.html
    Tutorial1.en.html Tutorial1.ru.html
    Tutorial2.en.html Tutorial2.ru.html
    Tutorial3.en.html Tutorial3.ru.html
    Tutorial4.en.html Tutorial4.ru.html
    ToDo.en.html ToDo.ru.html
    About.en.html About.ru.html
    msvc-settings.html
    DESTINATION doc)

add_subdirectory (pics)
