install (FILES
    Internals.1.en.png
    Internals.1.ru.png
    SqlDriver.1.png
    tut4-tree.png
    msvc-settings_html_2311dde8.png
    msvc-settings_html_32f49c2b.png
    msvc-settings_html_33910ae5.png
    msvc-settings_html_53d3cb51.png
    msvc-settings_html_64d1c5b6.png
    msvc-settings_html_701e5726.png
    msvc-settings_html_m37ea733d.png
    DESTINATION doc/pics)
